# hw7

./: README.md  api.py  client_request.py  example.json  main.py  model.pkl  model_training.ipynb  pyproject.toml
